--- a/notebooks/Danayt_Final.ipynb
+++ b/notebooks/Danayt_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "5b4f97e7-799e-41d8-aa17-b689f6384fed",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +66,7 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize, RegexpTokenizer\n",
     "import nltk.collocations as collocations\n",
+    "from nltk.util import ngrams\n",
     "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "d0a9f444-cef5-4061-89cd-99f7152ffb44",
    "metadata": {},
    "outputs": [],
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "30575c98-20a6-4ed8-9800-c4e859e9a15f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "7d3d46e0-edf2-4422-b438-de942f605043",
    "metadata": {},
    "outputs": [],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "101c9868-e2fc-42b9-8897-31986d3d23ac",
    "metadata": {},
    "outputs": [],
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "df195acb-d5cf-4877-bd97-9ddc6e94f7b7",
    "metadata": {},
    "outputs": [],
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "e011b152-32a6-403b-b859-a25093a75857",
    "metadata": {},
    "outputs": [
@@ -170,7 +171,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "0ec84b41-bd2a-4b65-b2fa-481300853d04",
    "metadata": {},
    "outputs": [
@@ -191,7 +192,7 @@
        "784"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "b727ec86-d94c-4d86-83a3-b929d6e5f058",
    "metadata": {},
    "outputs": [],
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "e6255b78-aaa1-4b06-99c3-1c9040015d49",
    "metadata": {},
    "outputs": [],
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "3a70de33-516c-4377-8976-5b35d3ed1c33",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "3d29e45f-5e02-4c8d-9351-27be5c27d46f",
    "metadata": {
     "scrolled": true
@@ -254,7 +255,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +266,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
+   "id": "6e7a2948-0657-4b3e-9d9f-f4ae9a9d8274",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product\n",
+       "Apple     5517\n",
+       "Google    2764\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['product'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0cb4f8ab-173d-4712-968d-e0df51e57a3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['product'] = data['product'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "ef8092a6-b443-490c-b582-da938455926e",
    "metadata": {},
    "outputs": [],
@@ -277,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "ec9659cd-9925-44fe-b72c-08384f84ccb4",
    "metadata": {},
    "outputs": [],
@@ -323,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "id": "e3178302-0e83-4a93-a114-492c7f29de6e",
    "metadata": {},
    "outputs": [],
@@ -336,23 +371,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a7c1617a-bf5f-4c4a-874c-6142b0459bdb",
+   "execution_count": 72,
+   "id": "87846916-20f5-40cf-a360-77b8421cfd23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = [doc_preparer(doc, sw) for doc in corpse]\n",
-    "y = data.sentiment"
+    "token_text = [doc_preparer(doc,sw) for doc in corpse]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "id": "c5d80acc-6236-4db9-bd58-d269e40ef9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the 'product' column to strings\n",
+    "data['product'] = data['product'].astype(str)\n",
+    "\n",
+    "# Concatenate the \"corpse\" and \"product\" columns\n",
+    "data['text_with_product'] = [text + ' ' + product for text, product in zip(token_text, data['product'])]\n",
+    "\n",
+    "# Assign the concatenated text to X\n",
+    "X = data['text_with_product']\n",
+    "\n",
+    "# Assign the target labels to y\n",
+    "y = data['sentiment']\n",
+    "\n",
+    "# Create an instance of CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Fit and transform the text data\n",
+    "X_vectorized = vectorizer.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcbdcc1c-6bb7-4180-ae97-acb1c933ec4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4265a9e-34c7-4f16-b29c-05d149cd155b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_vectorized,\n",
     "                                                    y,\n",
     "                                                    random_state=42,\n",
     "                                                    test_size=0.25)"
@@ -360,7 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "add4cf67-f776-473f-81c0-59624475edf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "64f5a659-af99-428b-9372-876f1a830af9",
    "metadata": {},
    "outputs": [],
@@ -383,35 +463,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df188393-1623-4a7a-9760-2cbbf81fb716",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ada4e121-9b61-4e05-b00c-6054c8ade87c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "71882632-13cc-4d9c-afbc-6f3e04f7b08f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnb = MultinomialNB()\n",
+    "\n",
+    "mnb.fit(X_t, y_t)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "1def5090-29a9-45e9-aac8-69f67083b1c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6490663232453316"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat = mnb.predict(X_val)\n",
+    "accuracy_score(y_val, y_hat)"
+   ]
   },
   {
    "cell_type": "code",
