--- a/clean_notebook_ver02_claire.ipynb
+++ b/clean_notebook_ver02_claire.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:blue\">Business Understanding</span>\n",
-    "We are the datascience team for an investment consulting company. Our goal is to build a model that can predict the sentimet of tweets (positive, negative, and neutral). Our predictors includes a brand-name (Apple or Google), which the text of the tweet mentions. This way, we can use our model to predict the sentiment of a given tweet, and compare the proportion of positive reviews associated with Apple products versus Google products. This will lead to a general understanding of which overall brand is doing better with the customer base."
+    "We are the data science team for an investment consulting company. Our goal is to build a model that predicts the sentimet of tweets on Twitter/ X using the categories positive, negative or netural. Our predictors include a brand-name (Apple or Google) and product name (Android, iPhone, etc). Our goal is to develop a high-accuracy model to gauge brand satisfaction. We'll use the sentiment of the tweet to compare the proportion of positive reviews associated with Apple products versus Google products. The creation of this model can then be generalized by training it on a wider range of data from social media in order to gauge brand satisfaction segmented by attributes such as event hashtags, top brand influencers or how sentiment for a given bran has evolved over time."
    ]
   },
   {
@@ -15,17 +15,25 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:blue\">Data Understanding</span>\n",
-    "* This data set is off of the SXSW Event twitter feed in 2013 [here](https://schedule.sxsw.com/2013/events/grid?day=8)\n",
-    "* The link to the download of the data set is [here](https://data.world/crowdflower/brands-and-product-emotions)\n",
+    "* The subject of our Twitter/ X data centers on the 2013 SXSW conference [here](https://schedule.sxsw.com/2013/events/grid?day=8)\n",
+    "  * South by Southwest, AKA SXSW is a multi-conference event of interactive media, music and film that occurs in Austin, Texas each year in March. Each tweet in our data mentions either Apple products, Google products, or both as well as specific products under those brands.\n",
+    "* We sourced our data from data.world which can be found [here](https://data.world/crowdflower/brands-and-product-emotions)\n",
     "* The dataset contains 9,093 entries."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eeed6ea",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "a418f357",
    "metadata": {},
    "source": [
-    "# <span style=\"color:blue\">Apple Products in this dataset</span>\n",
+    "### <span style=\"color:blue\">Features</span>:\n",
+    "#### <span style=\"color:blue\">Apple Products in this dataset</span>\n",
     "* apple                              \n",
     "* ipad                               \n",
     "* iPad \n",
@@ -34,14 +42,14 @@
     "* iPad or iPhone App\n",
     "* iPhone \n",
     "* Other Apple product or service \n",
-    "# <span style=\"color:blue\">Google Products mentioned in this data set</span>               \n",
+    "#### <span style=\"color:blue\">Google Products mentioned in this data set</span>               \n",
     "* Google                             \n",
     "* android                            \n",
     "* google                              \n",
     "* Other Google product or service    \n",
     "* Android App                        \n",
     "* Android                           \n",
-    "# <span style=\"color:blue\">Product wasn't marked</span>\n",
+    "#### <span style=\"color:blue\">Product wasn't marked</span>\n",
     "* Unknown   "
    ]
   },
@@ -65,39 +73,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0k/vkk0n9xx3zd6b7k7s4cdg07h0000gn/T/ipykernel_13464/923300077.py:51: DeprecationWarning: `import kerastuner` is deprecated, please use `import keras_tuner`.\n",
-      "  from kerastuner.tuners import RandomSearch\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/danayt/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /Users/danayt/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package tagsets to /Users/danayt/nltk_data...\n",
-      "[nltk_data]   Package tagsets is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /Users/danayt/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-      "[nltk_data]       date!\n",
-      "[nltk_data] Downloading package punkt to /Users/danayt/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,7 +100,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import unicodedata\n",
-    "from wordcloud import WordCloud\n",
+    "# from wordcloud import WordCloud\n",
     "\n",
     "import nltk\n",
     "from nltk.probability import FreqDist\n",
@@ -164,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98446acd-248e-49d4-b09f-3d6775664291",
    "metadata": {},
    "outputs": [],
@@ -174,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d0db8c5f-7b30-4b48-86d5-1b0395ea259f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d0a9f444-cef5-4061-89cd-99f7152ffb44",
    "metadata": {},
    "outputs": [],
@@ -194,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "30575c98-20a6-4ed8-9800-c4e859e9a15f",
    "metadata": {},
    "outputs": [],
@@ -206,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7d3d46e0-edf2-4422-b438-de942f605043",
    "metadata": {},
    "outputs": [],
@@ -217,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "101c9868-e2fc-42b9-8897-31986d3d23ac",
    "metadata": {},
    "outputs": [],
@@ -229,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "df195acb-d5cf-4877-bd97-9ddc6e94f7b7",
    "metadata": {},
    "outputs": [],
@@ -246,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e011b152-32a6-403b-b859-a25093a75857",
    "metadata": {},
    "outputs": [
@@ -270,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0ec84b41-bd2a-4b65-b2fa-481300853d04",
    "metadata": {},
    "outputs": [
@@ -292,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b727ec86-d94c-4d86-83a3-b929d6e5f058",
    "metadata": {},
    "outputs": [],
@@ -303,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e6255b78-aaa1-4b06-99c3-1c9040015d49",
    "metadata": {},
    "outputs": [],
@@ -315,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3a70de33-516c-4377-8976-5b35d3ed1c33",
    "metadata": {},
    "outputs": [],
@@ -328,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3d29e45f-5e02-4c8d-9351-27be5c27d46f",
    "metadata": {
     "scrolled": true
@@ -355,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6e7a2948-0657-4b3e-9d9f-f4ae9a9d8274",
    "metadata": {},
    "outputs": [
@@ -379,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0cb4f8ab-173d-4712-968d-e0df51e57a3d",
    "metadata": {},
    "outputs": [],
@@ -389,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ef8092a6-b443-490c-b582-da938455926e",
    "metadata": {},
    "outputs": [],
@@ -401,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ec9659cd-9925-44fe-b72c-08384f84ccb4",
    "metadata": {},
    "outputs": [],
@@ -445,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e3178302-0e83-4a93-a114-492c7f29de6e",
    "metadata": {},
    "outputs": [],
@@ -458,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "87846916-20f5-40cf-a360-77b8421cfd23",
    "metadata": {},
    "outputs": [],
@@ -468,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c5d80acc-6236-4db9-bd58-d269e40ef9f2",
    "metadata": {},
    "outputs": [],
@@ -496,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "659a7b6f-cd1f-4849-85b8-1854068708dc",
    "metadata": {},
    "outputs": [],
@@ -507,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5e02ac62-8065-4fc2-8170-8022abca6293",
    "metadata": {},
    "outputs": [
@@ -530,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a68ca802-c930-4df4-9166-e5e24204ef63",
    "metadata": {},
    "outputs": [],
@@ -544,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "32705ae2-ff9f-4012-a575-e926f29129eb",
    "metadata": {},
    "outputs": [
@@ -568,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "759d3954-eaa7-4821-9ef7-de2a217d9532",
    "metadata": {},
    "outputs": [
@@ -602,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f6a44da2-9f2f-43fd-9a50-81434ad89a89",
    "metadata": {},
    "outputs": [
@@ -634,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "e639122d-db5b-4166-a6b4-68a2f7f8290a",
    "metadata": {},
    "outputs": [
@@ -670,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "9dd4eafc-6a78-496e-b209-5d5049d4bd17",
    "metadata": {},
    "outputs": [
@@ -714,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f4265a9e-34c7-4f16-b29c-05d149cd155b",
    "metadata": {},
    "outputs": [],
@@ -727,18 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "64f5a659-af99-428b-9372-876f1a830af9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_t, X_val, y_t, y_val = train_test_split(X_train, y_train,\n",
-    "                                          test_size=0.25, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a5977c09-859f-4501-91a3-65e55cf79b00",
    "metadata": {},
    "outputs": [],
@@ -750,6 +725,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "df4461d0-1810-40c3-9ac7-591b39cb60db",
    "metadata": {},
    "source": [
@@ -758,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "1db91859-9433-4b41-bc43-9784091a77e8",
    "metadata": {
     "scrolled": true
@@ -800,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "ef21a51d-a72f-4f3d-9088-b6973a1bdaf9",
    "metadata": {},
    "outputs": [
@@ -822,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "2a729a10-abeb-43c0-a222-8c3ecefa8a75",
    "metadata": {},
    "outputs": [
@@ -861,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ce87b43d-7511-4a91-b2e9-0ae5c8996b0a",
    "metadata": {
     "scrolled": true
@@ -924,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "cc5c2a16-1ffa-4d05-8851-e5add505b6ba",
    "metadata": {},
    "outputs": [
@@ -958,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "eb8b1bf7-2e7c-425a-8ddf-8ed80fa8da4a",
    "metadata": {},
    "outputs": [],
@@ -968,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "73e70a3b-be57-472d-9920-111d5fe5aad6",
    "metadata": {},
    "outputs": [
@@ -1007,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8bfe2ecb-babd-4e5a-8561-39f5c3fbe4e3",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "4bde9eb2-417e-4072-8d74-3d1f879c14d6",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "359e1064-76ba-4db1-94f5-94f69b21e474",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b35ef1e0-01aa-4bfb-bee6-a0fca68183f5",
    "metadata": {
     "scrolled": true
@@ -1251,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "8805b72b-3367-4397-974b-36a8d5b45691",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "6d25f1e0-e617-4688-8e6d-e0a6cc3f192d",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "8af559aa-777c-4378-958d-4f57aea71607",
    "metadata": {},
    "outputs": [
