Display all model results in df, Table of Contents, inserted markdown doc

--- a/clean_notebook_ver03.ipynb
+++ b/clean_notebook_ver03.ipynb
@@ -1,65 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "id": "b603ba16",
-      "metadata": {},
-      "source": [
-        "**Table of contents**<a id='toc0_'></a>    \n",
-        "- [<span style=\"color:blue\">Business Understanding</span>](#toc1_)    \n",
-        "- [<span style=\"color:blue\">Data Understanding</span>](#toc2_)    \n",
-        "    - [<span style='color:blue'>Number of Instances</span>:](#toc2_1_1_)    \n",
-        "    - [<span style=\"color:blue\">Features</span>:](#toc2_1_2_)    \n",
-        "      - [<span style=\"color:blue\">Apple Products mentioned in tweet text</span>](#toc2_1_2_1_)    \n",
-        "      - [<span style=\"color:blue\">Google Products mentioned in tweet text</span>](#toc2_1_2_2_)    \n",
-        "      - [<span style=\"color:blue\">Products not clearly Apple or Google were tagged `Unknown`</span>](#toc2_1_2_3_)    \n",
-        "      - [Claire Note: Could just say there were blanks or we couldn't find any Apple/Google keywords in some tweets.](#toc2_1_2_4_)    \n",
-        "- [<span style=\"color:blue\">Import Libraries</span>](#toc3_)    \n",
-        "    - [Install additional libraries if needed:](#toc3_1_1_)    \n",
-        "- [Load Data:](#toc4_)    \n",
-        "- [Data Cleaning:](#toc5_)    \n",
-        "    - [Preview Data:](#toc5_1_1_)    \n",
-        "    - [Drop row where `tweet_text` = `NaN`](#toc5_1_2_)    \n",
-        "    - [Drop Duplicates:](#toc5_1_3_)    \n",
-        "    - [Rename columns for readability:](#toc5_1_4_)    \n",
-        "    - [Create one-hot-encoded columns for categorical variables:](#toc5_1_5_)    \n",
-        "      - [Create Columns for each keyword, where value = keyword](#toc5_1_5_1_)    \n",
-        "      - [Create `Product` column](#toc5_1_5_2_)    \n",
-        "      - [Gauge overall balance of Apple vs. Google representation in `tweet_text`](#toc5_1_5_3_)    \n",
-        "      - [Drop where `product` = `NaN` as this is where `tweet_text` did not contain any of our Apple or Google keywords](#toc5_1_5_4_)    \n",
-        "    - [Clean `sentiment` Column:](#toc5_1_6_)    \n",
-        "      - [Create \"Neutral\" category](#toc5_1_6_1_)    \n",
-        "      - [Convert text to numbers:](#toc5_1_6_2_)    \n",
-        "- [NLP Data Pre-Processing:](#toc6_)    \n",
-        "    - [Create variable for these columns:](#toc6_1_1_)    \n",
-        "      - [Create `token_text` by applying our `doc_preparer` function to loop through each tweet which applies our NLP preprocessing steps to each word in each tweet.](#toc6_1_1_1_)    \n",
-        "    - [Define predictor and target variables:](#toc6_1_2_)    \n",
-        "- [Exploratory Data Analysis](#toc7_)    \n",
-        "    - [Convert `tokenized_text` from one string value to a list of tokens](#toc7_1_1_)    \n",
-        "    - [Visually Explore the frequency of all tokens:](#toc7_1_2_)    \n",
-        "    - [Analysis of Token Frequency:](#toc7_1_3_)    \n",
-        "    - [Bigram Frequency](#toc7_1_4_)    \n",
-        "    - [Visualize entire Bag of Words](#toc7_1_5_)    \n",
-        "    - [Use CountVectorizer() to plot Number of Words against Word Frequency](#toc7_1_6_)    \n",
-        "    - [Visualize Frequency with Word Cloud:](#toc7_1_7_)    \n",
-        "- [Baseline Model, MultinomialNB](#toc8_)    \n",
-        "- [Balanced MultinomialNB](#toc9_)    \n",
-        "- [Smote with MultinomialNB](#toc10_)    \n",
-        "- [LogisticRegression](#toc11_)    \n",
-        "- [CNN](#toc12_)    \n",
-        "- [RNN](#toc13_)    \n",
-        "\n",
-        "<!-- vscode-jupyter-toc-config\n",
-        "\tnumbering=false\n",
-        "\tanchor=true\n",
-        "\tflat=false\n",
-        "\tminLevel=1\n",
-        "\tmaxLevel=6\n",
-        "\t/vscode-jupyter-toc-config -->\n",
-        "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 58,
       "id": "jM_2QqFHzpL7",
@@ -241,16 +182,19 @@
         "nltk.download('averaged_perceptron_tagger')\n",
         "nltk.download('punkt')\n",
         "\n",
-        "### Models:\n",
+        "### Scikit-learn Models:\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.naive_bayes import MultinomialNB\n",
         "\n",
         "### Data Preprocessing:\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.pipeline import Pipeline\n",
         "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from imblearn.pipeline import make_pipeline\n",
         "from imblearn.over_sampling import RandomOverSampler\n",
+        "import joblib\n",
+        "import pickle\n",
         "\n",
         "### Model Validation:\n",
         "from sklearn.metrics import accuracy_score, precision_score, recall_score,  confusion_matrix, ConfusionMatrixDisplay,balanced_accuracy_score\n",
@@ -261,13 +205,11 @@
         "### Model Tuning:\n",
         "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
         "\n",
-        "### Keras:\n",
+        "### Keras and Tensorflow:\n",
         "import keras\n",
         "from keras import layers\n",
         "from kerastuner.tuners import RandomSearch\n",
         "from keras import backend as K\n",
-        "\n",
-        "### Tensorflow:\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Embedding, LSTM, Dense\n",
@@ -276,7 +218,11 @@
         "### Data Visualization:\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "# from wordcloud import WordCloud"
+        "from wordcloud import WordCloud\n",
+        "\n",
+        "### Suppress Warnings:\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ]
     },
     {
@@ -732,7 +678,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### <a id='toc5_1_2_'></a>[Drop row where `tweet_text` = `NaN`](#toc0_)"
+        "### <a id='toc5_1_2_'></a>[Drop row #6 above where `tweet_text` = `NaN`](#toc0_)"
       ]
     },
     {
@@ -760,7 +706,7 @@
       ],
       "source": [
         "# Check that there's only one row where tweet_text is missing:\n",
-        "data.tweet_text.isna().sum()\n"
+        "data.tweet_text.isna().sum()"
       ]
     },
     {
@@ -2390,11 +2336,12 @@
         "def doc_preparer(doc, stop_words=sw):\n",
         "    # Normalize using The Unicode Normalization technique for entire strings\n",
         "    doc = unicodedata.normalize('NFKD', doc).encode('ascii', 'ignore').decode('utf-8', 'ignore')\n",
-        "    # Remove URLs\n",
+        "    ### Remove stuff!\n",
+        "    ### URLs\n",
         "    doc = re.sub(r'http\\S+|www\\S+|https\\S+', '', doc, flags=re.MULTILINE)\n",
-        "    # Remove mentions and hashtags\n",
+        "    ### Mentions and hashtags\n",
         "    doc = re.sub(r'\\@\\w+|\\#','', doc)\n",
-        "    # Remove punctuation and numbers\n",
+        "    ### Punctuation and numbers\n",
         "    regex_token = RegexpTokenizer(r\"([a-zA-Z]+(?:’[a-z]+)?)\")\n",
         "    doc = regex_token.tokenize(doc)\n",
         "    # Make all words lowercase\n",
